OO-7898: Import media files in a topic broker