@@ -19,18 +19,33 @@
  */
 package org.olat.modules.topicbroker.ui.wizard;
 
+
+import static org.olat.modules.topicbroker.TopicBrokerExportService.EXPORT_TEASER_IMAGE;
+import static org.olat.modules.topicbroker.TopicBrokerExportService.EXPORT_TEASER_VIDEO;
+import static org.olat.modules.topicbroker.TopicBrokerService.TEASER_IMAGE_MAX_SIZE_KB;
+import static org.olat.modules.topicbroker.TopicBrokerService.TEASER_IMAGE_MIME_TYPES;
+import static org.olat.modules.topicbroker.TopicBrokerService.TEASER_VIDEO_MAX_SIZE_KB;
+import static org.olat.modules.topicbroker.TopicBrokerService.TEASER_VIDEO_MIME_TYPES;
+
+import java.io.File;
 import java.io.IOException;
 import java.io.StringReader;
+import java.nio.file.FileVisitResult;
+import java.nio.file.FileVisitor;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.attribute.BasicFileAttributes;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
+import org.apache.logging.log4j.Logger;
 import org.olat.core.gui.UserRequest;
 import org.olat.core.gui.components.EscapeMode;
 import org.olat.core.gui.components.form.flexible.FormItemContainer;
@@ -48,15 +63,20 @@ import org.olat.core.gui.control.WindowControl;
 import org.olat.core.gui.control.generic.wizard.StepFormBasicController;
 import org.olat.core.gui.control.generic.wizard.StepsEvent;
 import org.olat.core.gui.control.generic.wizard.StepsRunContext;
+import org.olat.core.logging.Tracing;
 import org.olat.core.util.StringHelper;
 import org.olat.core.util.Util;
+import org.olat.core.util.WebappHelper;
 import org.olat.group.BusinessGroupService;
 import org.olat.group.BusinessGroupShort;
 import org.olat.modules.topicbroker.TBCustomFieldDefinition;
 import org.olat.modules.topicbroker.TBCustomFieldDefinitionSearchParams;
 import org.olat.modules.topicbroker.TBCustomFieldType;
 import org.olat.modules.topicbroker.TBTopic;
+import org.olat.modules.topicbroker.TBTopicSearchParams;
+import org.olat.modules.topicbroker.TopicBrokerExportService;
 import org.olat.modules.topicbroker.TopicBrokerService;
+import org.olat.modules.topicbroker.manager.TopicBrokerMediaResource;
 import org.olat.modules.topicbroker.model.TBImportTopic;
 import org.olat.modules.topicbroker.model.TBTransientTopic;
 import org.olat.modules.topicbroker.ui.TBTopicDataModel;
@@ -77,6 +97,8 @@ import com.opencsv.exceptions.CsvValidationException;
  *
  */
 public class ImportOverviewController extends StepFormBasicController {
+
+	private static final Logger log = Tracing.createLoggerFor(ImportOverviewController.class);
 	
 	private TBTopicImportDataModel dataModel;
 	private FlexiTableElement tableEl;
@@ -97,7 +119,7 @@ public class ImportOverviewController extends StepFormBasicController {
 		TBCustomFieldDefinitionSearchParams definitionSearchParams = new TBCustomFieldDefinitionSearchParams();
 		definitionSearchParams.setBroker(importContext.getBroker());
 		definitions = topicBrokerService.getCustomFieldDefinitions(definitionSearchParams).stream()
-				.filter(definition -> TBCustomFieldType.text == definition.getType())
+				.filter(definition -> importContext.getTempFilesDir() != null? true: TBCustomFieldType.text == definition.getType())
 				.sorted((d1, d2) -> Integer.compare(d1.getSortOrder(), d2.getSortOrder()))
 				.toList();
 		
@@ -126,6 +148,11 @@ public class ImportOverviewController extends StepFormBasicController {
 		
 		columnsModel.addFlexiColumnModel(new DefaultFlexiColumnModel(TopicImportCols.groupRestrictions));
 		
+		if (importContext.getTempFilesDir() != null) {
+			columnsModel.addFlexiColumnModel(new DefaultFlexiColumnModel(TopicImportCols.teaserImage));
+			columnsModel.addFlexiColumnModel(new DefaultFlexiColumnModel(TopicImportCols.teaserVideo));
+		}
+		
 		int columnIndex = TBTopicDataModel.CUSTOM_FIELD_OFFSET;
 		for (TBCustomFieldDefinition customFieldDefinition : definitions) {
 			DefaultFlexiColumnModel columnModel = new DefaultFlexiColumnModel(null, columnIndex++);
@@ -137,11 +164,12 @@ public class ImportOverviewController extends StepFormBasicController {
 		messageColumn.setAlwaysVisible(true);
 		columnsModel.addFlexiColumnModel(messageColumn);
 		
-		dataModel = new TBTopicImportDataModel(columnsModel);
+		dataModel = new TBTopicImportDataModel(columnsModel, definitions);
 		tableEl = uifactory.addTableElement(getWindowControl(), "table", dataModel, 20, false, getTranslator(), formLayout);
 		
 		
 		List<TBImportTopic> topics = getTopics();
+		appendFiles(topics);
 		importContext.setTopics(topics);
 		dataModel.setObjects(topics);
 		tableEl.reset(true, true, true);
@@ -159,7 +187,7 @@ public class ImportOverviewController extends StepFormBasicController {
 		List<TBImportTopic> importTopics = lines.stream()
 				.map(line -> toTopic(line, identifiersInLines))
 				.filter(Objects::nonNull)
-				.toList();
+				.collect(Collectors.toList());
 		
 		Set<Long> allGroupRestrictionKeys = importTopics.stream()
 				.map(TBImportTopic::getTopic)
@@ -196,8 +224,6 @@ public class ImportOverviewController extends StepFormBasicController {
 		// Last to first, so that the error of the most left column in the row is displayed.
 		try {
 			if (!definitions.isEmpty()) {
-				List<String> customFieldValues = new ArrayList<>(definitions.size());
-				Map<TBCustomFieldDefinition, String> definitionToValue = new HashMap<>(definitions.size());
 				for (int i = 0; i < definitions.size(); i++) {
 					TBCustomFieldDefinition definition = definitions.get(i);
 					int column = 6 + i;
@@ -205,11 +231,8 @@ public class ImportOverviewController extends StepFormBasicController {
 					if (customFieldValue != null && customFieldValue.isBlank()) {
 						customFieldValue = null;
 					}
-					customFieldValues.add(customFieldValue);
-					definitionToValue.put(definition, customFieldValue);
+					importTopic.putCustomFieldDefinitionToValue(definition, customFieldValue);
 				}
-				importTopic.setCustomFieldValues(customFieldValues);
-				importTopic.setCustomFieldDefinitionToValue(definitionToValue);
 			}
 			
 			
@@ -360,14 +383,201 @@ public class ImportOverviewController extends StepFormBasicController {
 		
 		return Arrays.stream(tokens).collect(Collectors.joining("\t"));
 	}
+
+	private void appendFiles(List<TBImportTopic> topics) {
+		if (importContext.getTempFilesDir() == null || !importContext.getTempFilesDir().exists()) {
+			return;
+		}
+		
+		Map<String, TBImportTopic> identifierToTopic = topics.stream()
+				.collect(Collectors.toMap(TBImportTopic::getIdentifier, Function.identity()));
+		
+		Set<String> topicIdentifiers = new HashSet<>(identifierToTopic.keySet());
+		TBTopicSearchParams searchParams = new TBTopicSearchParams();
+		searchParams.setBroker(importContext.getBroker());
+		topicBrokerService.getTopics(searchParams).stream()
+				.map(TBTopic::getIdentifier)
+				.forEach(identifier -> topicIdentifiers.add(identifier));
+		
+		Set<String> validDirIdentifiers = definitions.stream()
+				.filter(definition -> TBCustomFieldType.file == definition.getType())
+				.map(TBCustomFieldDefinition::getName)
+				.collect(Collectors.toSet());
+		validDirIdentifiers.add(TopicBrokerExportService.EXPORT_TEASER_IMAGE);
+		validDirIdentifiers.add(TopicBrokerExportService.EXPORT_TEASER_VIDEO);
+		
+		File topicsRoot = getRootFile(importContext.getTempFilesDir());
+		for (File topicRoot : topicsRoot.listFiles()) {
+			if (topicRoot.isDirectory()) {
+				String topicIdentifier = topicRoot.getName();
+				// No creation of new topics with only files
+				if (topicIdentifiers.contains(topicIdentifier)) {
+					TBImportTopic importTopic = identifierToTopic.get(topicIdentifier);
+					if (importTopic == null) {
+						// Topic not in csv but it exists already in the database
+						TBTransientTopic topic = new TBTransientTopic();
+						topic.setIdentifier(topicIdentifier);
+						importTopic = new TBImportTopic();
+						importTopic.setTopic(topic);
+						importTopic.setIdentifier(topicIdentifier);
+						importTopic.setFilesOnly(true);
+					}
+					appendFiles(importTopic, topicRoot);
+					if (importTopic.isFilesOnly() && importTopic.getIdentifierToFile() != null && !importTopic.getIdentifierToFile().isEmpty()) {
+						topics.add(importTopic);
+					}
+				}
+			}
+		}
+	}
 	
+	private void appendFiles(TBImportTopic importTopic, File topicRoot) {
+		File[] topicFileDirs = topicRoot.listFiles();
+		
+		File topicFileDir = getTopicFileDir(topicFileDirs, EXPORT_TEASER_IMAGE);
+		if (topicFileDir != null) {
+			appendFile(importTopic, topicFileDir, TEASER_IMAGE_MIME_TYPES, TEASER_IMAGE_MAX_SIZE_KB, null);
+		}
+		
+		topicFileDir = getTopicFileDir(topicFileDirs, EXPORT_TEASER_VIDEO);
+		if (topicFileDir != null) {
+			appendFile(importTopic, topicFileDir, TEASER_VIDEO_MIME_TYPES, TEASER_VIDEO_MAX_SIZE_KB, null);
+		}
+		
+		for (TBCustomFieldDefinition definition : definitions) {
+			if (TBCustomFieldType.file == definition.getType()) {
+				topicFileDir = getTopicFileDir(topicFileDirs, definition.getName());
+				if (topicFileDir != null) {
+					appendFile(importTopic, topicFileDir, null, TopicBrokerService.CUSTOM_FILE_MAX_SIZE_KB, definition);
+				}
+			}
+		}
+	}
+	
+	private void appendFile(TBImportTopic importTopic, File topicFileDir, Set<String> mimeTypes, int maxSizeKb, TBCustomFieldDefinition definition) {
+		List<File > files = getRegularFiles(topicFileDir);
+		
+		if (files.size() == 0) {
+			return;
+		}
+		
+		if (files.size() > 1) {
+			if (!StringHelper.containsNonWhitespace(importTopic.getMessage())) {
+				importTopic.setMessage(translate("import.error.directory.multi.files", topicFileDir.getName()));
+			}
+		}
+		
+		File file = files.get(0);
+		
+		if (mimeTypes != null && !mimeTypes.isEmpty()) {
+			String mimeType = WebappHelper.getMimeType(file.getName());
+			if (!StringHelper.containsNonWhitespace(mimeType) || !mimeTypes.contains(mimeType)) {
+				if (!StringHelper.containsNonWhitespace(importTopic.getMessage())) {
+					importTopic.setMessage(translate("import.error.wrong.mime.type", file.getName()));
+				}
+			}
+		}
+		
+		if (maxSizeKb < file.length() / 1000) {
+			if (!StringHelper.containsNonWhitespace(importTopic.getMessage())) {
+				importTopic.setMessage(translate("import.error.file.too.large", file.getName()));
+			}
+		}
+		
+		importTopic.putFile(topicFileDir.getName(), file);
+		if (definition != null) {
+			importTopic.putCustomFieldDefinitionToValue(definition, file.getName());
+		}
+	}
+
+	private List<File> getRegularFiles(File topicFileDir) {
+		try {
+			return Files.walk(topicFileDir.toPath(), 1)
+					.map(Path::toFile)
+					.filter(file -> 
+							   file.isFile()
+							&& !file.isHidden()
+							&& !file.getName().startsWith("__MACOSX")
+							&& !file.getName().contains(".DS_Store"))
+					.toList();
+		} catch (IOException e) {
+			log.error("", e);
+		}
+		return List.of();
+	}
+
+	private File getTopicFileDir(File[] topicFileDirs, String exportTeaserImage) {
+		for (File topicFileDir : topicFileDirs) {
+			if (topicFileDir.isDirectory() && exportTeaserImage.equals(topicFileDir.getName())) {
+				return topicFileDir;
+			}
+		}
+		return null;
+	}
+
+	private File getRootFile(File tempFilesDir) {
+		RootFileFinder rootFileFinder = new RootFileFinder();
+		try {
+			Files.walkFileTree(tempFilesDir.toPath(), rootFileFinder);
+			if (rootFileFinder.getRootFilePath() != null) {
+				return rootFileFinder.getRootFilePath().toFile();
+			}
+		} catch (IOException e) {
+			log.error("", e);
+		}
+		
+		// tempFilesDir is already the root dir
+		return tempFilesDir;
+	}
+	
+	private static class RootFileFinder implements FileVisitor<Path>{
+		
+		private Path rootFilePath;
+		
+		@Override
+		public FileVisitResult preVisitDirectory(Path dir, BasicFileAttributes attrs) throws IOException {
+			if (dir.getFileName().startsWith("__MACOSX") || dir.getFileName().startsWith(".DS_Store")) {
+				return FileVisitResult.SKIP_SUBTREE;
+			}
+			if (dir.getFileName().startsWith(ImportInputController.FILES_IMPORT_TEMPLATE_NAME)
+					|| dir.getFileName().startsWith(TopicBrokerMediaResource.TOPIC_FILES_PATH)) {
+				rootFilePath = dir;
+				return FileVisitResult.TERMINATE;
+			}
+			return FileVisitResult.CONTINUE;
+		}
+		
+		@Override
+		public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
+			return FileVisitResult.CONTINUE;
+		}
+		
+		@Override
+		public FileVisitResult visitFileFailed(Path file, IOException exc) throws IOException {
+			return FileVisitResult.CONTINUE;
+		}
+		
+		@Override
+		public FileVisitResult postVisitDirectory(Path dir, IOException exc) throws IOException {
+			return FileVisitResult.CONTINUE;
+		}
+		
+		Path getRootFilePath() {
+			return rootFilePath;
+		}
+	
+	}
+
 	public static class TBTopicImportDataModel extends DefaultFlexiTableDataModel<TBImportTopic> {
 		
 		public static final int CUSTOM_FIELD_OFFSET = 100;
 		private static final TopicImportCols[] COLS = TopicImportCols.values();
+		
+		private final List<TBCustomFieldDefinition> customFieldDefinitions;
 
-		public TBTopicImportDataModel(FlexiTableColumnModel columnsModel) {
+		public TBTopicImportDataModel(FlexiTableColumnModel columnsModel, List<TBCustomFieldDefinition> customFieldDefinitions) {
 			super(columnsModel);
+			this.customFieldDefinitions = customFieldDefinitions;
 		}
 		
 		@Override
@@ -378,7 +588,11 @@ public class ImportOverviewController extends StepFormBasicController {
 
 		public Object getValueAt(TBImportTopic row, int col) {
 			if (col >= CUSTOM_FIELD_OFFSET) {
-				return row.getCustomFieldValues().get(col - CUSTOM_FIELD_OFFSET);
+				if (row.getCustomFieldDefinitionToValue() == null) {
+					return null;
+				}
+				TBCustomFieldDefinition customFieldDefinition = customFieldDefinitions.get(col - CUSTOM_FIELD_OFFSET);
+				return row.getCustomFieldDefinitionToValue().get(customFieldDefinition);
 			}
 			
 			switch(COLS[col]) {
@@ -388,6 +602,10 @@ public class ImportOverviewController extends StepFormBasicController {
 			case minParticipants: return row.getMinParticipants();
 			case maxParticipants: return row.getMaxParticipants();
 			case groupRestrictions: return row.getGroupRestrictions();
+			case teaserImage: return row.getIdentifierToFile() != null && row.getIdentifierToFile().containsKey(EXPORT_TEASER_IMAGE)
+					? row.getIdentifierToFile().get(EXPORT_TEASER_IMAGE).getName() : null;
+			case teaserVideo: return row.getIdentifierToFile() != null && row.getIdentifierToFile().containsKey(EXPORT_TEASER_VIDEO)
+					? row.getIdentifierToFile().get(EXPORT_TEASER_VIDEO).getName() : null;
 			case importMessage: return StringHelper.containsNonWhitespace(row.getMessage())
 					? "<span><i class=\"o_icon o_icon_error\"></i> " + row.getMessage() + "</span>"
 					: null;
@@ -402,6 +620,8 @@ public class ImportOverviewController extends StepFormBasicController {
 			minParticipants("topic.participants.min"),
 			maxParticipants("topic.participants.max"),
 			groupRestrictions("topic.group.restriction"),
+			teaserImage("topic.teaser.image"),
+			teaserVideo("topic.teaser.video"),
 			importMessage("import.message");
 			
 			private final String i18nKey;
